sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:15: error: '(' expected but identifier found.
  }while i+1<getNombreValeurs
         ^